[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Elfs/MageElf.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MageElf.gd" type="Script" id=3]
[ext_resource path="res://Fonts/FreePixel.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.13615, 16.1596 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "DamageAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("DamageLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DamageLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -19.7834, 13.1889 ), Vector2( -26, 13.189 ), Vector2( -13, 13.189 ), Vector2( -19.7834, 13.1889 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="MageElf" instance=ExtResource( 1 )]
position = Vector2( 72, 0 )
script = ExtResource( 3 )
velocity = Vector2( 75, 50 )

[node name="EnemySprite" parent="." index="0"]
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="EnemyCollider" parent="." index="1"]
position = Vector2( -0.0992126, -0.0992126 )
shape = SubResource( 1 )

[node name="DamageLabel" type="Label" parent="." index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -19.7834
margin_top = 13.1889
margin_right = 20.2166
margin_bottom = 27.1889
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "11111"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animator" type="AnimationPlayer" parent="." index="3"]
anims/DamageAnimation = SubResource( 3 )

[node name="DeathTimer" type="Timer" parent="." index="4"]
wait_time = 0.1

[node name="ShootTimer" type="Timer" parent="." index="5"]

[node name="SkillSpawn" type="Position2D" parent="." index="6"]
position = Vector2( 0, 19.6929 )

[node name="ElfAnimator" type="AnimationPlayer" parent="." index="7"]
anims/Walk = SubResource( 4 )
[connection signal="timeout" from="DeathTimer" to="." method="onDeathTimeout"]
[connection signal="timeout" from="ShootTimer" to="." method="onShootTimeout"]
